fix: fix text-wrap

--- a/connections/src/app/components/group-list-item/group-list-item.component.scss
+++ b/connections/src/app/components/group-list-item/group-list-item.component.scss
@@ -6,7 +6,7 @@
   &-name {
     flex: 1;
     padding: 5px;
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
     color: black;
     text-decoration: none;
     transition: background-color 0.4s;
