--- a/connections/src/app/components/people-list-item/people-list-item.component.scss
+++ b/connections/src/app/components/people-list-item/people-list-item.component.scss
@@ -9,7 +9,7 @@
   &-name {
     flex: 1;
     padding: 5px;
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
     text-decoration: none;
     color: black;
     cursor: pointer;
